# spectrumdata_test

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
db/: mongo.py
fetcher/: factory.py  httpx_fetcher.py
framework/: app.py  scheme.py  settings.py
parser/: bs4_parser.py  factory.py
repository/: factory.py  interface.py  mongo_repository.py
src/spectrumdata_test/db/: mongo.py
src/spectrumdata_test/fetcher/: factory.py  httpx_fetcher.py  interface.py
src/spectrumdata_test/framework/: app.py  settings.py
src/spectrumdata_test/parser/: bs4_parser.py  factory.py  interface.py
src/spectrumdata_test/repository/: factory.py  mongo_repository.py
src/spectrumdata_test/task/: error.py  factory.py  interface.py  parse_pages.py
src/spectrumdata_test/task_queue/: asyncio_task_queue.py
task/: factory.py  parse_pages.py
task_queue/: asyncio_task_queue.py
tests/: conftest.py
tests/api/: test_parser.py
