[project]
name = "spectrumdata-test"
version = "0.1.0"
description = "Simple html pages parser"
authors = [
    {name = "filippov-da",email = "filippok2004180@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
packages = [
  { include = "spectrumdata_test", from = "src" },
]
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-httpx (>=0.36.0,<0.37.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ". src"
